[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/harvey/player/harvey_spriteframes.tres" type="SpriteFrames" id=1]
[ext_resource path="res://addons/beehive/machine.gd" type="Script" id=2]
[ext_resource path="res://src/harvey/player/Run.gd" type="Script" id=3]
[ext_resource path="res://src/harvey/player/Idle.gd" type="Script" id=4]
[ext_resource path="res://src/harvey/player/Player.gd" type="Script" id=5]
[ext_resource path="res://addons/core/resources/fonts/debug-info-text.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/harvey/ProduceIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/harvey/seed-icon_sheet.png" type="Texture" id=8]
[ext_resource path="res://src/harvey/ToolIcon.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 13 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "seed",
"speed": 5.0
} ]

[node name="Player" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -13 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
scale = Vector2( 2, 2 )
frames = ExtResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="Machine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="Machine"]
script = ExtResource( 4 )

[node name="Run" type="Node" parent="Machine"]
script = ExtResource( 3 )

[node name="StateLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -57.0
margin_right = 20.0
margin_bottom = -41.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "state"
text = "state"
fit_content_height = true
scroll_active = false

[node name="ActionLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -42.0
margin_right = 20.0
margin_bottom = -26.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="Item" type="Node2D" parent="."]
position = Vector2( -13, -29 )

[node name="ProduceIcon" parent="Item" instance=ExtResource( 7 )]
visible = false
scale = Vector2( 1, 1 )

[node name="SeedIcon" type="AnimatedSprite" parent="Item"]
visible = false
position = Vector2( 4, 4 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "seed"

[node name="ToolIcon" parent="Item" instance=ExtResource( 9 )]
visible = false
